[package]
name = "tg_video_translator"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]



[dependencies]
dotenv = "0.15.0"
log = "0.4"
anyhow = "1"
flowsnet-platform-sdk = "0.1.2"
http_req_wasi = "0.10.2"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.12.0" }
url = { version = "2.3.1", features = ["serde"] }
tg-flows = "0.3.2"